Modernization, cleanups and warnings